--- a/pages/staff.html
+++ b/pages/staff.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Team - ATIH-UVA</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
@@ -23,24 +26,24 @@
 
                     <div class="staff-card">
                         <div class="staff-photo">
-                            <img src="../assets/team/placeholder.png" alt="Xuxin Fan">
+                            <img src="../assets/team/fan.webp" alt="Xuxin Fan">
                         </div>
                         <div class="staff-info">
                             <h3>Xuxin Fan</h3>
                             <h4>President, Policy Chair</h4>
-                            <p class="major"></p>
+                            <p class="major">Degree: </p>
                             <p class="bio"></p>
                         </div>
                     </div>
 
                     <div class="staff-card">
                         <div class="staff-photo">
-                            <img src="../assets/team/placeholder.png" alt="Owen Watzlavick">
+                            <img src="../assets/team/owen.webp" alt="Owen Watzlavick">
                         </div>
                         <div class="staff-info">
                             <h3>Owen Watzlavick</h3>
                             <h4>Vice President, Policy Chair</h4>
-                            <p class="major"></p>
+                            <p class="major">Degree: Computer Science, Economics</p>
                             <p class="bio"></p>
                         </div>
                     </div>
@@ -51,7 +54,7 @@
                         </div>
                         <div class="staff-info">
                             <h3>Charles Melvin</h3>
-                            <h4>Webmaster, Research Chair</h4>
+                            <h4>Web Admin, Research Chair</h4>
                             <p class="major">Degree: Cognitive Science/Computer Science/Astronomy</p>
                             <p class="bio"></p>
                         </div>
@@ -59,7 +62,7 @@
 
                     <div class="staff-card">
                         <div class="staff-photo">
-                            <img src="../assets/team/placeholder.png" alt="Arthur Oker">
+                            <img src="../assets/team/arthur.webp" alt="Arthur Oker">
                         </div>
                         <div class="staff-info">
                             <h3>Arthur Oker</h3>
@@ -83,6 +86,18 @@
 
                     <div class="staff-card">
                         <div class="staff-photo">
+                            <img src="../assets/team/placeholder.png" alt="Lexie">
+                        </div>
+                        <div class="staff-info">
+                            <h3>Lexie Chen</h3>
+                            <h4></h4>
+                            <p class="major">Degree: Computer Science, Data Science</p>
+                            <p class="bio"></p>
+                        </div>
+                    </div>
+
+                    <div class="staff-card">
+                        <div class="staff-photo">
                             <img src="../assets/team/placeholder.png" alt="Justin">
                         </div>
                         <div class="staff-info">
@@ -96,6 +111,9 @@
             </div>
         </section>
     </main>
+
+    <!-- Mobile menu overlay -->
+    <div class="mobile-menu-overlay"></div>
 
     <!-- Footer will be dynamically inserted here -->
     <div id="footer-container"></div>
