--- a/pages/about.html
+++ b/pages/about.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - ATIH-UVA</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
+    <!-- Load versioning system first -->
+    <script src="../js/version.js"></script>
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
@@ -41,6 +46,9 @@
             </div>
         </section>
     </main>
+
+    <!-- Mobile menu overlay -->
+    <div class="mobile-menu-overlay"></div>
 
     <!-- Footer will be dynamically inserted here -->
     <div id="footer-container"></div>
