Added remaining staff

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -38,7 +38,7 @@
                                 <h4>President</h4>
                                 <div class="contact-method">
                                     <span class="contact-icon">📧</span>
-                                    <a href="mailto:xxxxxx@virginia.edu">xxxxxx@virginia.edu</a>
+                                    <a href="mailto:wrc5gs@virginia.edu">wrc5gs@virginia.edu</a>
                                 </div>
                             </div>
                         </div>
@@ -52,7 +52,7 @@
                                 <h4>Vice President</h4>
                                 <div class="contact-method">
                                     <span class="contact-icon">📧</span>
-                                    <a href="mailto:xxxxxx@virginia.edu">xxxxxx@virginia.edu</a>
+                                    <a href="mailto:sbx7gq@virginia.edu">sbx7gq@virginia.edu</a>
                                 </div>
                             </div>
                         </div>
@@ -87,26 +87,9 @@
                             <div class="general-info">
                                 <h3>Email Us</h3>
                                 <p>For general questions and information:</p>
-                                <a href="mailto:atihuva@virginia.edu" class="highlight-email">atihuva@virginia.edu</a>
+                                <a href="mailto:atih_at_uva@virginia.edu" class="highlight-email">atih_at_uva@virginia.edu</a>
                             </div>
                         </div>
-
-                        <div class="general-card">
-                            <div class="general-icon">
-                                <img src="../assets/gui/discord-icon.svg" alt="Discord" class="discord-icon">
-                            </div>
-                            <div class="general-info">
-                                <h3>Join Our Discord</h3>
-                                <p>For community discussions and quick responses:</p>
-                                <a href="#" class="btn btn-primary">Join Discord Server</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="feedback-section">
-                        <h2>Anonymous Feedback</h2>
-                        <p>We value your thoughts and suggestions. Feel free to provide anonymous feedback through our form:</p>
-                        <a href="#" class="btn btn-outline">Submit Anonymous Feedback</a>
                     </div>
                 </div>
             </div>
