--- a/pages/join.html
+++ b/pages/join.html
@@ -57,25 +57,11 @@
                                 <h2>Join Our Listserv</h2>
                                 <p>Subscribe to our email listserv to receive important announcements, event notifications, and news directly to your inbox.</p>
                                 <form class="listserv-form">
-                                    <div class="form-group">
-                                        <input type="email" placeholder="Your UVA email address" required>
-                                    </div>
-                                    <button type="submit" class="btn btn-accent">Subscribe</button>
+                                    <a href="https://lists.virginia.edu/sympa/subscribe/atih_at_uva?previous_action=info" target="_blank" class="btn btn-accent">Subscribe</a>
                                 </form>
                                 <p class="note">We respect your privacy and will only send relevant content.</p>
                             </div>
                         </div>
-                    </div>
-
-                    <div class="join-benefits">
-                        <h2>Benefits of Joining</h2>
-                        <ul class="benefits-list">
-                            <li><span class="benefit-icon">✓</span> Connect with like-minded individuals passionate about ethical AI</li>
-                            <li><span class="benefit-icon">✓</span> Access to exclusive events and workshops</li>
-                            <li><span class="benefit-icon">✓</span> Opportunities to collaborate on projects</li>
-                            <li><span class="benefit-icon">✓</span> Stay informed about the latest in AI ethics and technology</li>
-                            <li><span class="benefit-icon">✓</span> Build professional connections with industry experts</li>
-                        </ul>
                     </div>
                 </div>
             </div>
