--- a/pages/staff.html
+++ b/pages/staff.html
@@ -67,26 +67,14 @@
                         <div class="staff-info">
                             <h3>Arthur Oker</h3>
                             <h4>Philosophy Chair, Treasurer</h4>
-                            <p class="major">Degree: </p>
+                            <p class="major">Degree: Philosophy, Computer Science</p>
                             <p class="bio"></p>
                         </div>
                     </div>
 
                     <div class="staff-card">
                         <div class="staff-photo">
-                            <img src="../assets/team/placeholder.png" alt="Selene">
-                        </div>
-                        <div class="staff-info">
-                            <h3>Yinuo Zeng (Selene)</h3>
-                            <h4>Legacy Founder</h4>
-                            <p class="major">Degree: </p>
-                            <p class="bio"></p>
-                        </div>
-                    </div>
-
-                    <div class="staff-card">
-                        <div class="staff-photo">
-                            <img src="../assets/team/placeholder.png" alt="Lexie">
+                            <img src="../assets/team/lexie.webp" alt="Lexie">
                         </div>
                         <div class="staff-info">
                             <h3>Lexie Chen</h3>
@@ -98,12 +86,12 @@
 
                     <div class="staff-card">
                         <div class="staff-photo">
-                            <img src="../assets/team/placeholder.png" alt="Justin">
+                            <img src="../assets/team/placeholder.webp" alt="Justin">
                         </div>
                         <div class="staff-info">
                             <h3>Tianyi Zhang (Justin)</h3>
                             <h4>Marketing/Social Chair</h4>
-                            <p class="major">Degree: </p>
+                            <p class="major">Degree: Undecided</p>
                             <p class="bio"></p>
                         </div>
                     </div>
