Changed logo, added staff modal

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="assets/gui/logoplaceholder.webp" alt="ATIH-UVA Logo" class="featured-logo">
+                    <img src="assets/gui/logo.webp" alt="ATIH-UVA Logo" class="featured-logo">
                 </div>
             </div>
         </section>
