--- a/pages/about.html
+++ b/pages/about.html
@@ -28,19 +28,19 @@
 
                     <div class="about-quote">
                         <blockquote>
-                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula."
+                            “The true potential of AI lies in its ability to uplift humanity while safeguarding and empowering future generations.”
                         </blockquote>
-                        <cite>— Lorem Ipsum</cite>
+                        <cite>— Amit Ray</cite>
                     </div>
 
-                    <h2>Our Mission</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus.</p>
+                    <h2>Our Purpose</h2>
+                    <p>We aim to raise awareness that AI technology will significantly reshape our lives—and the concrete impact is likely not far off. The AI 2027 Project serves as a wake-up call: by 2027, powerful agentic AI systems may become deeply integrated into society, and it is still in doubt whether people can rein them in. As a chapter of All Tech Is Human, we not only sound the alarm but also work toward a viable solution—how to build an awesome AI community on grounds—that other clubs in universities around the world can adopt.</p>
                     
                     <h2>Our Values</h2>
-                    <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras mattis consectetur purus sit amet fermentum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Aenean lacinia bibendum nulla sed consectetur.</p>
+                    <p>We believe that the future of AI belongs to everyone, not just tech people. That is why we embrace a good mix of humanities and technologies, bring together diverse voices to explore how AI intersects with various fields (e.g., education, foreign affairs, governance.) That being said, we are not a group exclusively for tech people; rather, we would love to connect and work with anyone who deeply cares about our tech future ahead. No matter what major backgrounds you have, computer science or otherwise, you are welcome here. We value interdisciplinary thinking, open dialogues, and the courage to ask hard questions.</p>
                     
-                    <h2>Our Purpose</h2>
-                    <p>Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla. Maecenas faucibus mollis interdum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+                    <h2>Our Mission</h2>
+                    <p>Our mission is to engage UVA students and faculty in meaningful dialogues about the impact of AI. We are building a diverse, vibrant, and supportive community that deeply cares about how AI is developed and deployed at UVA and beyond. By 2027, we envision a UVA where students and faculty are equipped, informed, and empowered to confront the era of agentic AI.</p>
                     </ul>
                 </div>
             </div>
