--- a/pages/staff.html
+++ b/pages/staff.html
@@ -23,7 +23,6 @@
         <section class="staff-section">
             <div class="container">
                 <div class="staff-grid">
-
                     <div class="staff-card">
                         <div class="staff-photo">
                             <img src="../assets/team/fan.webp" alt="Xuxin Fan">
@@ -32,7 +31,7 @@
                             <h3>Xuxin Fan</h3>
                             <h4>President, Policy Chair</h4>
                             <p class="major">Degree: Mathematics, Public Policy</p>
-                            <p class="bio"></p>
+                            <p class="bio hidden">Bio coming soon.</p>
                         </div>
                     </div>
 
@@ -44,10 +43,10 @@
                             <h3>Owen Watzlavick</h3>
                             <h4>Vice President, Policy Chair</h4>
                             <p class="major">Degree: Computer Science, Economics</p>
-                            <p class="bio"></p>
+                            <p class="bio hidden">Bio coming soon.</p>
                         </div>
                     </div>
-
+                    
                     <div class="staff-card">
                         <div class="staff-photo">
                             <img src="../assets/team/charles.webp" alt="Charles Melvin">
@@ -56,7 +55,7 @@
                             <h3>Charles Melvin</h3>
                             <h4>Web Admin/Developer, Research Chair</h4>
                             <p class="major">Degree: Cognitive Science/Computer Science/Astronomy</p>
-                            <p class="bio"></p>
+                            <p class="bio hidden">Bio coming soon.</p>
                         </div>
                     </div>
 
@@ -68,10 +67,10 @@
                             <h3>Arthur Oker</h3>
                             <h4>Philosophy Chair, Treasurer</h4>
                             <p class="major">Degree: Philosophy, Computer Science</p>
-                            <p class="bio"></p>
+                            <p class="bio hidden">Bio coming soon.</p>
                         </div>
                     </div>
-
+                    
                     <div class="staff-card">
                         <div class="staff-photo">
                             <img src="../assets/team/lexie.webp" alt="Lexie">
@@ -80,19 +79,19 @@
                             <h3>Lexie Chen</h3>
                             <h4>Webmaster</h4>
                             <p class="major">Degree: Computer Science, Data Science</p>
-                            <p class="bio"></p>
+                            <p class="bio hidden">Bio coming soon.</p>
                         </div>
                     </div>
 
                     <div class="staff-card">
                         <div class="staff-photo">
-                            <img src="../assets/team/placeholder.webp" alt="Justin">
+                            <img src="../assets/team/justin.webp" alt="Justin">
                         </div>
                         <div class="staff-info">
                             <h3>Tianyi Zhang (Justin)</h3>
                             <h4>Marketing/Social Chair</h4>
                             <p class="major">Degree: Undecided</p>
-                            <p class="bio"></p>
+                            <p class="bio hidden">Bio coming soon.</p>
                         </div>
                     </div>
                 </div>
@@ -101,11 +100,10 @@
     </main>
 
     <!-- Mobile menu overlay -->
-    <div class="mobile-menu-overlay"></div>
-
-    <!-- Footer will be dynamically inserted here -->
+    <div class="mobile-menu-overlay"></div>    <!-- Footer will be dynamically inserted here -->
     <div id="footer-container"></div>
 
     <script src="../components/addComponents.js"></script>
+    <script src="../js/staffModal.js"></script>
 </body>
 </html>
