--- a/pages/staff.html
+++ b/pages/staff.html
@@ -1,110 +1,139 @@
-<!DOCTYPE html>
+﻿<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Team - ATIH-UVA</title>
-    <link rel="icon" type="image/x-icon" href="../assets/gui/favicon.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/main.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Our Team - Societal AI at UVA</title>
+    <!-- Security Headers (Note: X-Frame-Options and frame-ancestors should be set via HTTP headers in production) -->
+    <meta http-equiv="X-Content-Type-Options" content="nosniff" />
+    <meta http-equiv="X-XSS-Protection" content="1; mode=block" />
+    <meta
+      http-equiv="Referrer-Policy"
+      content="strict-origin-when-cross-origin"
+    />
+    <meta
+      http-equiv="Permissions-Policy"
+      content="geolocation=(), microphone=(), camera=()"
+    />
+
+    <!-- Content Security Policy -->
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self'; base-uri 'self'; form-action 'self';"
+    />
+
+    <link rel="icon" type="image/x-icon" href="../assets/gui/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Load security utilities first -->
+    <script src="../js/security.js"></script>
+    <!-- Load versioning system -->
+    <script src="../js/version.js"></script>
+    <link rel="stylesheet" href="../css/main.css" />
+  </head>
+  <body>
     <!-- Header will be dynamically inserted here -->
     <div id="header-container"></div>
 
     <main>
-        <section class="page-header">
-            <div class="container">
-                <h1>Meet the Board!</h1>
+      <section class="page-header">
+        <div class="container">
+          <h1>Meet the Board!</h1>
+        </div>
+      </section>
+
+      <section class="staff-section">
+        <div class="container">
+          <div class="staff-grid">
+            <div class="staff-card">
+              <div class="staff-photo">
+                <img src="../assets/team/fan.webp" alt="Xuxin Fan" />
+              </div>
+              <div class="staff-info">
+                <h3>Xuxin Fan</h3>
+                <h4>President, Policy Chair</h4>
+                <p class="major">Degree: Mathematics, Public Policy</p>
+                <p class="bio hidden">Bio coming soon.</p>
+              </div>
             </div>
-        </section>
 
-        <section class="staff-section">
-            <div class="container">
-                <div class="staff-grid">
-                    <div class="staff-card">
-                        <div class="staff-photo">
-                            <img src="../assets/team/fan.webp" alt="Xuxin Fan">
-                        </div>
-                        <div class="staff-info">
-                            <h3>Xuxin Fan</h3>
-                            <h4>President, Policy Chair</h4>
-                            <p class="major">Degree: Mathematics, Public Policy</p>
-                            <p class="bio hidden">Bio coming soon.</p>
-                        </div>
-                    </div>
-
-                    <div class="staff-card">
-                        <div class="staff-photo">
-                            <img src="../assets/team/owen.webp" alt="Owen Watzlavick">
-                        </div>
-                        <div class="staff-info">
-                            <h3>Owen Watzlavick</h3>
-                            <h4>Vice President, Policy Chair</h4>
-                            <p class="major">Degree: Computer Science, Economics</p>
-                            <p class="bio hidden">Bio coming soon.</p>
-                        </div>
-                    </div>
-                    
-                    <div class="staff-card">
-                        <div class="staff-photo">
-                            <img src="../assets/team/charles.webp" alt="Charles Melvin">
-                        </div>
-                        <div class="staff-info">
-                            <h3>Charles Melvin</h3>
-                            <h4>Web Admin/Developer, Research Chair</h4>
-                            <p class="major">Degree: Cognitive Science/Computer Science/Astronomy</p>
-                            <p class="bio hidden">Bio coming soon.</p>
-                        </div>
-                    </div>
-
-                    <div class="staff-card">
-                        <div class="staff-photo">
-                            <img src="../assets/team/arthur.webp" alt="Arthur Oker">
-                        </div>
-                        <div class="staff-info">
-                            <h3>Arthur Oker</h3>
-                            <h4>Philosophy Chair, Treasurer</h4>
-                            <p class="major">Degree: Philosophy, Computer Science</p>
-                            <p class="bio hidden">Bio coming soon.</p>
-                        </div>
-                    </div>
-                    
-                    <div class="staff-card">
-                        <div class="staff-photo">
-                            <img src="../assets/team/lexie.webp" alt="Lexie">
-                        </div>
-                        <div class="staff-info">
-                            <h3>Lexie Chen</h3>
-                            <h4>Webmaster</h4>
-                            <p class="major">Degree: Computer Science, Data Science</p>
-                            <p class="bio hidden">Bio coming soon.</p>
-                        </div>
-                    </div>
-
-                    <div class="staff-card">
-                        <div class="staff-photo">
-                            <img src="../assets/team/justin.webp" alt="Justin">
-                        </div>
-                        <div class="staff-info">
-                            <h3>Tianyi Zhang (Justin)</h3>
-                            <h4>Marketing/Social Chair</h4>
-                            <p class="major">Degree: Undecided</p>
-                            <p class="bio hidden">Bio coming soon.</p>
-                        </div>
-                    </div>
-                </div>
+            <div class="staff-card">
+              <div class="staff-photo">
+                <img src="../assets/team/owen.webp" alt="Owen Watzlavick" />
+              </div>
+              <div class="staff-info">
+                <h3>Owen Watzlavick</h3>
+                <h4>Vice President, Policy Chair</h4>
+                <p class="major">Degree: Computer Science, Economics</p>
+                <p class="bio hidden">Bio coming soon.</p>
+              </div>
             </div>
-        </section>
+
+            <div class="staff-card">
+              <div class="staff-photo">
+                <img src="../assets/team/charles.webp" alt="Charles Melvin" />
+              </div>
+              <div class="staff-info">
+                <h3>Charles Melvin</h3>
+                <h4>Web Admin/Developer, Research Chair</h4>
+                <p class="major">
+                  Degree: Cognitive Science, Computer Science, Astronomy
+                </p>
+                <p class="bio hidden">Bio coming soon.</p>
+              </div>
+            </div>
+
+            <div class="staff-card">
+              <div class="staff-photo">
+                <img src="../assets/team/arthur.webp" alt="Arthur Oker" />
+              </div>
+              <div class="staff-info">
+                <h3>Arthur Oker</h3>
+                <h4>Philosophy Chair, Treasurer</h4>
+                <p class="major">Degree: Philosophy, Computer Science</p>
+                <p class="bio hidden">Bio coming soon.</p>
+              </div>
+            </div>
+
+            <div class="staff-card">
+              <div class="staff-photo">
+                <img src="../assets/team/lexie.webp" alt="Lexie" />
+              </div>
+              <div class="staff-info">
+                <h3>Lexie Chen</h3>
+                <h4>Webmaster</h4>
+                <p class="major">Degree: Computer Science, Data Science</p>
+                <p class="bio hidden">Bio coming soon.</p>
+              </div>
+            </div>
+
+            <div class="staff-card">
+              <div class="staff-photo">
+                <img src="../assets/team/justin.webp" alt="Justin" />
+              </div>
+              <div class="staff-info">
+                <h3>Tianyi Zhang (Justin)</h3>
+                <h4>Marketing/Social Chair</h4>
+                <p class="major">Degree: Undecided</p>
+                <p class="bio hidden">Bio coming soon.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- Mobile menu overlay -->
-    <div class="mobile-menu-overlay"></div>    <!-- Footer will be dynamically inserted here -->
+    <div class="mobile-menu-overlay"></div>
+    <!-- Footer will be dynamically inserted here -->
     <div id="footer-container"></div>
 
     <script src="../components/addComponents.js"></script>
     <script src="../js/staffModal.js"></script>
-</body>
+  </body>
 </html>
